<resources>
    <string name="app_name">flyUdp</string>
    <string name="app_udp_ver">flyUdp Soft Version: V1.0.2</string>
    <string name="app_udp_ip">请选择服务器地址</string>
    <string name="app_udp_port">服务器端口:</string>
    <string name="app_udp_port_hint">请输入服务器的端口</string>
    <string name="app_udp_port_nor">8095</string>
    <string name="app_udp_stream">分配的会话ID:</string>
    <string name="app_udp_stream_nor">123456</string>
    <string name="app_udp_stream_hint">请输入会话ID</string>
    <string name="app_udp_can">请选择是否使用flyCan</string>
    <string name="app_udp_can_1">公网</string>
    <string name="app_udp_can_2">flyCan通信加速</string>
    <string name="app_udp_push">Push</string>
    <string name="app_udp_pull">Pull</string>
    <string name="app_udp_tital_push">UdpPush</string>
    <string name="app_udp_tital_pull">UdpPull</string>
    <string name="str_udp_ip">服务器地址不能为空,请核对</string>
    <string name="str_udp_port">服务器端口不能为空,请核对</string>
    <string name="str_udp_stream">会话ID不能为空,请核对</string>
    <string name="resp_udp_ok">服务器应答成功</string>
    <string name="resp_udp_fail">服务器应答失败</string>
    <string name="resp_udp_ip">获取服务器列表成功</string>
    <string name="resp_udp_ip_fail">获取服务器列表失败</string>
    <string name="app_rtmp_tital_push">RtmpPush</string>
    <string name="app_rtmp_tital_pull">RtmpPull</string>
    <string name="app_rtmp_push_cap">CAP</string>
    <string name="app_edit">Edit</string>
    <string name="app_edit_title">Config</string>
    <string name="app_edit_done">Done</string>
    <string name="app_edit_IP1">Rest API IP:</string>
    <string name="app_edit_IP2">CPS API IP:</string>
    <string name="app_edit_IP3">UDP API IP:</string>
    <string name="app_edit_hint">请输入服务器地址</string>
    <string name="app_edit_rest_api">60.205.137.243:80</string>
    <string name="app_edit_cps_api">59.110.10.28:8097</string>
    <string name="app_edit_udp_api">59.110.10.28:8097</string>
    <string name="app_edit_push_set">Push码率设置</string>
    <string name="app_edit_server">服务器地址不能为空</string>
    <string name="app_login_progress">服务器请求中，请等待。。。</string>
    <string name="app_loginout_progress">资源释放中，请等待。。。</string>
    <string name="app_udp_pull_can">该streamId被占用</string>
    <string name="app_udp_edit">刷新会话列表</string>
    <string name="app_udp_top_view1">选择会话中转服务器</string>
    <string name="app_udp_top_view2">选择会话</string>
</resources>
