<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#c5c5c5" >

        <RelativeLayout
            android:id="@+id/rl_back"
            android:layout_width="50dp"
            android:layout_height="match_parent" >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@mipmap/common_list_back"
                android:clickable="false"
                android:contentDescription="@string/app_name"
                android:focusable="false" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/rl_line"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/rl_back">

            <ImageView
                android:contentDescription="@string/app_name"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="#ececec"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/rl_text"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/rl_line"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/app_edit_title"
            android:textSize="16sp" />
        
        <RelativeLayout
            android:id="@+id/rl_line2"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/rl_text">

            <ImageView
                android:contentDescription="@string/app_name"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="#ececec"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/rl_set"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/rl_line2"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/app_edit_done"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center|end"
                android:text="@string/app_edit_IP1"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_rest_api"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/app_edit_hint"
                android:inputType="text"
                android:text="@string/app_edit_rest_api"
                android:textColor="#7f7f7f"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:gravity="center|end"
                android:text="@string/app_edit_IP2"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_cps_api"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/app_edit_hint"
                android:inputType="text"
                android:text="@string/app_edit_cps_api"
                android:textColor="#7f7f7f"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#F6F6F6"
            android:gravity="center|start"
            android:text="@string/app_edit_push_set"
            android:textSize="12sp" />

        <ListView
            android:id="@+id/listCode"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:dividerHeight="1dp"
            android:fadingEdge="none"
            android:footerDividersEnabled="true"
            android:listSelector="@drawable/push_selector"
            android:scrollbars="vertical"
            android:transcriptMode="normal" />
    </LinearLayout>

</LinearLayout>